# games-e-commerce

./: Jenkinsfile  README.md
api/: README.md  package-lock.json  package.json  tsconfig.json
api_express/: README.md  package-lock.json  package.json
api_nest/: Jenkinsfile  README.md  bun.lockb  dev-entrypoint.sh  dev.Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  prod-prisma-entrypoint.sh  prod.Dockerfile  start-dev.sh  start-prod.sh
frontend-next/: .env.example  .gitignore  README.md  bun.lockb  components.json  dev.Dockerfile  docker-compose.dev.yml  docker-compose.nginx.yml  docker-compose.prod.yml  image-loader.mjs  jest.config.mjs  middleware.ts  next.config.ts  nginx.conf  package-lock.json  package.json  prod.Dockerfile  start-prod.sh  (+2 more)
image_service/: .gitignore  Jenkinsfile  README.md  dev.Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  prod.Dockerfile  pyproject.toml  start-prod.sh  stop.sh
image_service/app/: main.py
image_service/app/api/v1/endpoints/: image.py
image_service/app/core/: config.py  exceptions.py  logging.py
image_service/app/endpoints/: create_image.py
image_service/app/model/: minio.py
image_service/app/model/mongo/: image.py  mongo.py
image_service/app/repository/: exceptions.py  image_repository.py
image_service/app/repository/mongo/: image.py  mongo.py
image_service/app/services/: exceptions.py  image_service.py
image_service/app/tests/: test_image_service.py
image_service/app/utilities/: current_user_id.py
(+118 files in other folders)
