[project]
name = "image-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "minio>=7.2.15",
    "motor>=3.7.0",
    "pydantic>=2.11.3",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "image-service[dev]",
    "ruff>=0.12.7",
]

[tool.uv.sources]
image-service = { workspace = true }
